stuck on a basic bug

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,7 @@
+body{
+    background-image: url("../img/navy-blue-seamless-pattern-retro-260nw-1184868877.webp");
+}
+
 .borderRight{
     border-right: 2px solid black;
 }
@@ -11,7 +15,7 @@ body{
 }
 .wrap{
     height:100vh;
-    background-color: rgb(180, 180, 180);
+    background-image: url("../img/navy-blue-seamless-pattern-retro-260nw-1184868877.webp");
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -126,16 +130,19 @@ span{
 
 .size-index{
     justify-content: center;
-    font-size: 3em;
+    font-size: 2em;
     align-items: center;  
     display: flex;
     font-family: 'Francois One', sans-serif;
     background-color: rgb(139, 139, 139);
 }
 
-/* .smile{
-    height: 10px;
-    width: 10px;
+.sticker{
     position: absolute;
     background-image: url("../img/smliey.png");
-} */
+    height: 50px;
+    width: 50px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
